--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-json": "^2.1.1",
     "eslint-plugin-prettier": "^3.1.4",
-    "prettier": "^2.0.5"
+    "prettier": "^2.0.5",
+    "typescript": "^3.9.7"
   },
   "name": "airbnb-typescript-styleguide-boilerplate",
   "dependencies": {},
